<resources>
    <string name="app_name">ActivityLifeCycleDemonstration</string>
    <string name="CREATOR">App by Dr. P. Sivaram</string>
    <string name="msg">Activity Lifecycle of an Android App with Toast Messages Display</string>
    <string name="five">05. onPause() It is invoked when an activity is going into the background but has not yet been killed. It is a counterpart to onResume(). When an activity is launched in front of another activity, this callback will be invoked on the top activity (currently on screen).</string>
    <string name="four">04. onResume() It is invoked when the activity starts interacting with the user. At this point, the activity is at the top of the activity stack, with a user interacting with it. Always followed by onPause() when the activity goes into the background or is closed by the user.</string>
    <string name="three">03. onRestart() It is invoked after the activity has been stopped and prior to its starting stage and thus is always followed by onStart() when any activity is revived from background to on-screen.</string>
    <string name="six">06. onStop() It is invoked when the activity is not visible to the user. It is followed by onRestart() when the activity is revoked from the background, followed by onDestroy() when the activity is closed or finished, and nothing when the activity remains on the background only.</string>
    <string name="one">01. onCreate() It is called when the activity is first created. This is where all the static work is done like creating views, binding data to lists, etc. This method also provides a Bundle containing its previous frozen state, if there was one.</string>
    <string name="two">02. onStart() It is invoked when the activity is visible to the user. It is followed by onResume() if the activity is invoked from the background. It is also invoked after onCreate() when the activity is first started.</string>
</resources>